# nexus

./: CMakeCache.txt  CMakeLists.txt  Makefile  ReproductorMusica  cmake_install.cmake  next.pro  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ReproductorMusica_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
ReproductorMusica_autogen/MYYQ2Y7GGF/: moc_audioengine.cpp  moc_audioengine.cpp.d  moc_avfaudioengine.cpp  moc_avfaudioengine.cpp.d  moc_coreaudioengine.cpp  moc_coreaudioengine.cpp.d
ReproductorMusica_autogen/UVLADIE3JM/: moc_asynctaskmanager.cpp  moc_asynctaskmanager.cpp.d  moc_audioconverter.cpp  moc_audioconverter.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_playlist.cpp  moc_playlist.cpp.d  moc_threadpool.cpp  moc_threadpool.cpp.d
ReproductorMusica_autogen/include/: ui_mainwindow.h
docs/: technical_overview.md
next.app/Contents/: Info.plist
recursos/: recursos.qrc
recursos/estilos/: apple.qss  claro.qss  oscuro.qss  spotify.qss  winamp.qss
src/: asynctaskmanager.cpp  asynctaskmanager.h  audioconverter.cpp  audioconverter.h  configuracion.cpp  configuracion.h  eventfilter.cpp  eventfilter.h  gstreamerplayer.cpp  gstreamerplayer.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatamanager.cpp  metadatamanager.h  playlist.cpp  playlist.h  reproductor.cpp  reproductor.h  tema.cpp  tema.h  threadpool.cpp  threadpool.h
src/audio/: audioengine.cpp  audioengine.h  avfaudioengine.h  avfaudioengine.mm  coreaudioengine.cpp  coreaudioengine.h
styles/: apple_music.qss  spotify.qss  winamp.qss
